base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: "alb-2048"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTPS":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    link.argocd.argoproj.io/external-link: https://2048.janeperf.com
spec:
  rules:
    - host: 2048.janeperf.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: service-2048
              port:
                number: 80
  tls:
    - hosts:
      - 2048.janeperf.com
